Fix learn more button positioning

Fix regression in which the Learn more button is right aligned on the
x-position, when instead it should be left aligned.

BUG=668374

Review-Url: https://codereview.chromium.org/2539293002
Cr-Commit-Position: refs/heads/master@{#435755}

Former-commit-id: aebc5dfefce04c8a258d43cf6061b94b6fbe241d